# robotic_transformer_1

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
robotic_transformer/: __init__.py  rt1_model.py
robotic_transformer/data/: __init__.py  tf_record_dataset.py
robotic_transformer/film_efficientnet/: __init__.py  film_efficient.py  model.py  utils.py
robotic_transformer/models/: USE.py  __init__.py  tokenlearner.py  transformer_decoder.py
robotic_transformer/workflow/: inference.py  train.py  utils.py
sample/: bc_z_action.json  rt1_action.json
